# MLOps_homework

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  чеклист_команд.txt
953617865023309975/6d192f55aa3646c38e5a5ae0aca57006/checkpoints/: epoch=499-step=1500.ckpt
configs/: infer.yaml  train.yaml
data/: Прошлые_данныеCSV.csv
info_project/: project_structure.txt  чеклист_команд.txt
lightning_logs/version_0/: hparams.yaml  metrics.csv
predict/: predictions_20250103_205803.csv  predictions_20250104_143552.csv
scripts/: conf_pred.json  conf_train.json  infer.py  train.py
